# f5-allinone-skills

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.claude-plugin/: plugin.json
docs/superpowers/plans/: 2026-04-16-vs-ssl-cert-report.md
docs/superpowers/specs/: 2026-04-16-vs-ssl-cert-report-design.md
skills/f5-allinone/: SKILL.md  __init__.py  f5_audit.py  f5_client.py  f5_config.py  f5_config_parser.py  f5_deploy.py  f5_inventory.py  f5_monitor.py  f5_ssl.py  inventory.yaml  requirements.txt
tests/: test_f5_audit.py  test_f5_client.py  test_f5_config.py  test_f5_config_parser.py  test_f5_deploy.py  test_f5_inventory.py  test_f5_monitor.py  test_f5_ssl.py
