[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "f5-allinone"
version = "1.0.0"
description = "F5 BIG-IP 一站式管理工具：状态监控、配置查询、SSL证书管理、配置下发"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "urllib3>=1.26.0",
]

[project.scripts]
f5-monitor = "f5_allinone.cli:main"

[tool.setuptools.packages.find]
where = ["skills"]

[tool.setuptools.package-dir]
"f5_allinone" = "skills/f5-allinone"
